@@ -332,8 +332,10 @@ static void ff_audio_decode_data (audio_decoder_t *this_gen, buf_element_t *buf)
         while (out < decode_buffer_size) {
           int stream_status = xine_get_status(this->stream);
 
-          if (stream_status == XINE_STATUS_QUIT || stream_status == XINE_STATUS_STOP)
+	  if (stream_status == XINE_STATUS_QUIT || stream_status == XINE_STATUS_STOP) {
+	    this->size = 0;
             return;
+	  }
 
           audio_buffer = 
             this->stream->audio_out->get_buffer (this->stream->audio_out);
